[tool.poetry]
name = "mdx_blogpost_crew"
version = "0.1.0"
description = "mdx_blogpost_crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "0.22.4"
setuptools = "^69.2.0"
crewai-tools = "^0.1.0"
beautifulsoup4 = "^4.12.3"
html2text = "^2024.2.26"
playwright = "^1.42.0"

[tool.poetry.scripts]
mdx_blogpost_crew = "mdx_blogpost_crew.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"